Allow admin to edit room capacity (max occupants per room)
